--- a/css/style.css
+++ b/css/style.css
@@ -247,13 +247,13 @@ body {
 		text-align: left;
 	}
 
-	.conteudoPrincipal-cursos-link:nth-child(3n) {
+	/* .conteudoPrincipal-cursos-link:nth-child(3n) {
 		margin-right: 0;
 	}
 
 	.conteudoPrincipal-cursos-link:nth-child(3n+1) {
 		margin-left: 0;
-	}
+	} */
 
 }
 
@@ -262,7 +262,7 @@ body {
 		margin: 1.333%;
 	}
 
-	.conteudoPrincipal-cursos-link:nth-child(3n) {
+	/* .conteudoPrincipal-cursos-link:nth-child(3n) {
 		margin-right: 1.33%;
 	}
 
@@ -276,7 +276,7 @@ body {
 
 	.conteudoPrincipal-cursos-link:nth-child(4n+1) {
 		margin-left: 0;
-	}
+	} */
 
 	.videoSobre-sobre {
 		margin-left: 1.5em;
